# harness

./: .gitignore  AGENTS.md  README.md  TODO.md  install.sh
.codex/: AGENTS.md  config.toml
codex/: AGENTS.md  config.example.toml
config/: codex-standalone-installer.conf
docs/: agent-client-config.md  backup-lifecycle-phase2.md  bounded-cpu-routes.md  checkpoint-restart-format.md  ci-and-merge-controls.md  early-cache-bootstrap.md  environment-portability.md  (+29 more)
tests/smoke/: CMakeLists.txt  README.md  affinity.cpp  checkpoint_restart.cpp  cpp20.cpp  cpu.c  cpu.cpp  cpu.f90  cuda.cu  debugger-readiness.sh  debugger.c  llm_torch.py  locked-venv-readiness.sh  mpi-multinode.c  mpi.c  numerical.cpp  python.py  sanitizer.c  scientific-library-readiness.sh  venv-readiness.sh
tests/smoke/jobs/: ab-multinode-mpi.pbs  ab-pytorch.pbs  ab2-multinode-mpi.pbs  ab2-pytorch.pbs  accelerator-readiness.sh  affinity-readiness.sh  al-pytorch.slurm  cache-startup-readiness.sh  checkpoint-restart-readiness.sh  compute-debugger-readiness.sh  cpu-readiness.sh  local-accelerator.slurm  local-affinity-epyc.slurm  local-affinity.slurm  local-cache-startup.slurm  local-checkpoint-restart-epyc.slurm  local-checkpoint-restart.slurm  local-cpu.slurm  local-mpi.slurm  local-multinode-mpi.slurm  local-numerical-epyc.slurm  local-numerical.slurm  local-pytorch.slurm  local.slurm  mpi-readiness.sh  multinode-mpi-readiness.sh  numerical-readiness.sh  pytorch-readiness.sh  rc-pytorch.slurm  ri-pytorch.slurm  shared-executable-visibility.sh  source-contract.sh  t4-multinode-mpi.sh  t4-pytorch.sh
(+537 files in other folders)
